--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "is-ip": "^2.0.0",
     "lodash": "^4.17.4",
     "memcached": "^2.2.2",
-    "redis": "^2.8.0",
+    "redis": ">=3.1.1",
     "shortid": "^2.2.8",
     "mongoose": "^5.12.7"
   }
